# phishing-analyzer

./: .gitignore  pyproject.toml
src/phishing_analyzer/: authresults.py  cli.py  corpus.py  findings.py  headers.py  parser.py  received.py
tests/: test_corpus.py  test_findings.py  test_headers.py  test_invariants.py  test_parser.py  tests_recieved.py
tests/samples/: authresults_fail.eml  bad_message_id.eml  freemail_brand.eml  legit_esp.eml  legit_paypal.eml  legit_subdomain_replyto.eml  name_shows_other_domain.eml  no_message_id.eml  sample.eml  spoofed.eml
