[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phishing-analyzer"
version = "0.1.0"
description = "A CLI tool that analyzes emails for phishing indicators"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
phishing-analyzer = "phishing_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest.>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]

